UI problems on mobile devices, fixes #109.

--- a/orienteer-core/src/main/resources/org/orienteer/core/web/sb-admin.css
+++ b/orienteer-core/src/main/resources/org/orienteer/core/web/sb-admin.css
@@ -3,13 +3,13 @@
 /* ------------------------------- */
 
 body {
-    padding-top: 100px;
+    /*padding-top: 100px;*/
     background-color: #f8f8f8;
 }
 
 @media(min-width:768px) {
     body {
-        padding-top: 50px;
+        /*padding-top: 50px;*/
     }
 }
 
@@ -29,7 +29,7 @@ body {
 
 @media(min-width:768px) {
     #page-wrapper {
-        position: inherit;
+        position: static;
         margin: 0 0 0 250px;
         padding: 0 30px;
         min-height: 1300px;
